--- a/Listing_element/elements.html
+++ b/Listing_element/elements.html
@@ -4,6 +4,7 @@
 </head>
 <body>
     <h1> Planets </h1>
+    <!--Ordered List-->
     <ol>
         <li>Mercury</li>
         <li>Venus</li>
@@ -15,5 +16,41 @@
         <li>Neptune</li>
         <li>ploto</li>
     </ol>
+    <!--Changing_type-->
+    <ol type"A">       ----------------------------------------->("A","a","I","i") 
+        <li>Mercury</li>
+        <li>Venus</li>
+        <li>Earth</li>
+        <li>Mars</li>
+        <li>Jupiter</li>
+        <li>Saturn</li>
+        <li>Uranus</li>
+        <li>Neptune</li>
+        <li>ploto</li>
+    </ol>
+    <!--unordered_list-->
+     <ul>
+        <li>Mercury</li>
+        <li>Venus</li>
+        <li>Earth</li>
+        <li>Mars</li>
+        <li>Jupiter</li>
+        <li>Saturn</li>
+        <li>Uranus</li>
+        <li>Neptune</li>
+        <li>ploto</li>
+    </ul>
+    <ul style="list-style-type:circle">     -------------------------->(Square,disc,none,etc,...)
+        <li>Mercury</li>
+        <li>Venus</li>
+        <li>Earth</li>
+        <li>Mars</li>
+        <li>Jupiter</li>
+        <li>Saturn</li>
+        <li>Uranus</li>
+        <li>Neptune</li>
+        <li>ploto</li>
+    </ul>
+    
 </body>
 </html>
